# Repository-Template-v3

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .secrets.baseline  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SESSION_INIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMISING.md  Dockerfile  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  SETUP.md  alembic.ini  docker-compose.sandbox.yml  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  release-please-config.json  services.yaml
.claude/: settings.json
.claude/agents/: README.md  asdd-orchestrator.md  asdd-phase-0-intake.md  asdd-phase-1-conception.md  asdd-phase-10-ai-safety.md  asdd-phase-11-observability.md  asdd-phase-12-release-rc.md  asdd-phase-13-production.md  asdd-phase-14-post-deploy.md  asdd-phase-2-discovery.md  asdd-phase-3-grooming.md  asdd-phase-4-specification.md  asdd-phase-5-architecture.md  asdd-phase-6-development.md  asdd-phase-7-code-review.md  asdd-phase-8-testing.md  asdd-phase-9-devsecops.md  phase-executor.md
.claude/hooks/: README.md  high-risk-action-guard.py  verify-high-risk-guard.py
.claude/personas/: legal-reviewer.md  ops-analyst.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  FEATURE_SPEC_TEMPLATE.md  control-triggers.yml  dependabot.yml  project-board-definition.json  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: rfc.md
.github/ISSUE_TEMPLATE/: bug_report.md  change_request.md  feature_request.md  spike.md
.github/PULL_REQUEST_TEMPLATE/: ai-agent-change.md  docs.md  infrastructure-change.md  security-change.md  standard-change.md
.github/rulesets/: develop.json  main.json
.github/workflows/: auto-merge.yml  branch-protection-audit.yml  cd-production.yml  cd-staging.yml  chaos-schedule.yml  chaos-smoke.yml  ci-ai-review.yml  ci-ai-safety.yml  ci-context-graph.yml  ci-frontend.yml  ci-go.yml  ci-java.yml  ci-k8s-probe-lint.yml  ci-model-contract.yml  ci-otel-collector-lint.yml  ci-version-check.yml  ci.yml  codeql.yml  governance-gate.yml  index-docs.yml  infracost.yml  issue-lifecycle.yml  llm-budget-tracker.yml  pr-governance.yml  release.yml  sbom.yml  secret-scanning.yml  staging-dast.yml  template-init.yml  template-sync.yml  tf-drift.yml
alembic/: env.py
alembic/versions/: 0001_create_audit_events.py  0002_enable_pgcrypto_vector.py  0003_create_agent_memory_documents.py  0004_create_requests.py  0005_create_hitl_archive.py  0006_add_context_graph_table.py
docs/: architecture.md  dependency-manifest.yaml  eol-inventory.yaml  glossary.md  repo-structure.md  template-structure.md  troubleshooting.md
docs/adr/: ADR-0001-monorepo-structure-and-governance.md  ADR-0002-technology-stack-selection.md  ADR-0003-async-api-strategy.md  ADR-0004-observability-stack.md  ADR-0005-message-broker-selection.md  ADR-0006-deployment-strategy.md  ADR-0007-service-mesh.md  ADR-0008-secrets-management.md  ADR-0009-caching-strategy.md  ADR-0010-agent-framework-selection.md  ADR-0011-hitl-hotl-model.md  ADR-0012-pii-masking-strategy.md  ADR-0013-data-retention-policy.md  ADR-0014-multi-agent-harness-strategy.md  ADR-0015-feature-flag-strategy.md  ADR-0016-agent-sandbox-execution-policy.md  ADR-0017-agent-memory-architecture.md  ADR-0018-db-encryption-at-rest.md  ADR-0019-redis-tls-value-encryption.md  ADR-0020-finops-cost-allocation.md  ADR-0021-agent-communication-protocol.md  ADR-0022-testing-strategy.md  ADR-0023-frontend-architecture.md  ADR-0024-api-versioning-strategy.md  ADR-0025-language-selection.md  ADR-0026-sox-audit-log-immutability.md  ADR-0027-iso27001-change-management.md  ADR-0028-dora-metrics.md  ADR-0029-devsecops-pipeline-security.md  ADR-0030-rtk-token-efficiency.md  ADR-0031-agent-onboarding-protocol.md  ADR-0032-sub-agent-specialization-registry.md  ADR-0033-long-running-agent-session-durability.md  ADR-0034-agentic-escalation-protocol.md  ADR-0035-ai-assisted-ci-review.md  ADR-0036-agentic-cyber-defense.md  ADR-0037-governance-gate-enforcement.md  ADR-0038-learn-stage-feedback-loop.md  ADR-0039-governed-tool-registry.md  ADR-0040-agentic-maturity-model.md  (+38 more)
docs/ai-governance/: README.md  ai-safety-checklist.md  autonomy-boundaries.md  dual-use-registry.md  eu-ai-act-compliance.md  eval-scorecard.md  memory-governance.md  model-card.md  model-lifecycle.md  nist-ai-rmf.md  prompt-registry.md  rag-quality.md
docs/api/: api-standards.md  error-model.md
docs/change-log/: SCHEMA.md
docs/change-management/: CAB-PROCESS.md  README.md  RFC-TEMPLATE.md
docs/compliance/: README.md  dependency-policy.md  hardening-plan.md  iso27001-annex-a-control-matrix.md  remediation-register.md  security-questionnaire-quickref.md  slsa-supply-chain-assessment.md  soc2-tsc-mapping.md  trust-summary.md
docs/data/: data-classification.md  data-model-catalog.md  erd.md  migrations.md  redis-key-naming.md
docs/governance/: applicability-matrix.yml  branch-protection-as-code.md  control-applicability-matrix.md  gate-lifecycle.md  governance-labels.md  org-migration-runbook.md  org-protection-ruleset.json  owner-onboarding.md  raci-matrix.md  rbac-matrix.md  release-evidence-package.md  team-topology.md  traceability-matrix.md
docs/gtm/: GTM-README.md
docs/infrastructure/: README.md  (+3 more)
frontend/: .env.example
harness/: business-value-check.yml  code-check.yml  doc-check.yml  release-check.yml  staging-check.yml
infrastructure/: README.md
scaffold/: README.md  scaffold.py
scaffold/templates/python/: pyproject.toml
scaffold/templates/python/src/__MODULE_NAME__/: __init__.py  config.py  main.py
scaffold/templates/python/tests/unit/: test_health.py
scripts/: agentic_maturity_check.py  asdd_state.py  check-template-placeholders.sh  check-versions.sh  check_llm_budget.py  check_version_consistency.py  doctor.sh  generate_context_graph.py  new-service.sh  smoke.sh  template-init.sh
skills/: README.md
specs/: README.md  SPEC-ADDENDUM-product-operational.md  SPEC-TEMPLATE.md
tests/: .test-integrity-baseline.json  README.md  conftest.py
(+779 files in other folders)
