[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "template-service"
version = "2.14.5"
description = "Enterprise monorepo template — production-ready, multi-language, with optional AI/agent components"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "aiokafka>=0.11.0",
    "redis[asyncio]>=5.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "anthropic>=0.28.0",
    "cryptography>=42.0.0",
    "tenacity>=8.3.0",
    "slowapi>=0.1.9",
    "openfeature-sdk>=0.4.0",
    "pyjwt>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",  # provides --timeout used by ci-model-contract.yml
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.9",
    "pip-audit>=2.7.0",
    "detect-secrets>=1.5.0",
    "gibberish-detector>=0.1.0",
    "pre-commit>=3.7.0",
    "mkdocs-material>=9.5.0",
    "types-redis>=4.6.0",
    "fakeredis>=2.0.0",
    "pip>=26.1.2",  # PYSEC-2026-196 — keep the env pip above the pip-audit advisory floor
]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
# Scaffolding templates ship their own pyproject.toml and are linted when a
# service is generated from them, not as part of this repo's lint pass.
extend-exclude = ["scaffold/templates"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (no print() in src/)
    "RUF", # ruff-specific rules
]
ignore = [
    "S101", # assert allowed in tests
    "S105", # hardcoded passwords — detect-secrets handles this
    "B008", # do not perform function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
# Tests: asserts (S), prints (T20), long data/fixture lines (E501), blind-exception
# assertions (B017), and ambiguous-unicode in comments/docstrings (RUF002/RUF003)
# are all idiomatic in test code.
"tests/**" = ["S", "T20", "E501", "B017", "RUF002", "RUF003"]
"alembic/**" = ["S608"]  # Dynamic SQL is standard in Alembic migrations
"scaffold/scaffold.py" = ["T201"]  # CLI tool — print() is its user-facing output
"scripts/**" = ["T201"]  # CLI scripts — print() is their user-facing output
".claude/hooks/**" = ["T201"]  # Claude Code hook CLIs — print() is their user-facing output

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "asyncpg.*",
    "confluent_kafka.*",
    "opentelemetry.*",
    "prometheus_client.*",
    "alembic.*",
    "slowapi.*",
    "fakeredis.*",
    "openfeature.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: fast, no I/O",
    "integration: requires running services (postgres, redis, kafka)",
    "security: defensive validation tests",
    "chaos: game-day / fault injection tests",
    "abuse_case: structured abuse-case tests (mock LLMs, no API cost); run on every PR",
    "model_contract: real LLM contract tests; requires ANTHROPIC_API_KEY; run on model-version PRs only",
    "e2e: full user journey tests; set BASE_URL env var to run against a live server",
    "benchmark: performance benchmark; measures latency against SLO thresholds",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true  # RFC-0017: combine coverage data across the unit + integration CI jobs
omit = [
    "src/shared/generated/*",   # generated gRPC stubs
    "src/api/rest/main.py",     # lifespan/startup wiring — covered by integration tests
    "alembic/*",
]

[tool.coverage.report]
# Ratchet (RFC-0020): floor set just below current unit coverage (~86.6%). Raise it as
# coverage rises; never lower it. CI enforces this via --cov-fail-under in ci.yml.
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

# ── Bandit ────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used — allowed in tests
